--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">				
   <link rel="stylesheet" href="css/styles.css">	
-	
+
+
+
 </head>
 <body>
 	
@@ -23,6 +25,8 @@
 
 	</div>
 	
-  
+	<!--Scripts-->
+	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
